--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
         <label for="check" class="menu-btn" >
             <i class="fas fa-bars" ></i>
         </label><div>
-        <div class="toplogo"><img src="img/logo.svg" alt=""></div>
+            <div class="toplogo"><a href="index.html"><img src="img/logo.svg" alt=""></a></div>
         <div><img src="img/cart.webp"class="cart" ></div>
     </div>
         <ul class="navlinks">
         <li><a href="profile.html">Profile</a></li>
-        <li><a href="about.html">Track order</a></li>
-        <li><a href="contact.html"> your CART</a></li>
-        <li><a href="order.html" class="contact">Order now</a></li>
+        <li><a href="trackorder.html">Track order</a></li>
+        <li><a href="yourcart.html"> your cart</a></li>
+        <li><a href="ordernow.html" class="contact">Order now</a></li>
         </ul>
     </nav>
     </header>
