--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
-<script  src="faq.js"></script>
+<link rel="shortcut icon" type="img/png"href="img/logo">
+
+<script  src="amin.js"></script>
 </head>
 <body style="background-color:#181818">
     </script>
@@ -299,19 +301,5 @@
 </div>
 <div class="center"><img src="logo.svg" alt="" style="width:218px"></div>
 </footer>
-<script>
-    window.onscroll = function() {myFunction()};
-    
-    var navbar = document.getElementById("main-nav");
-    var sticky = navbar.offsetTop;
-    
-    function myFunction() {
-    if (window.pageYOffset >= sticky) {
-        navbar.classList.add("sticky")
-    } else {
-        navbar.classList.remove("sticky");
-    }
-    }
-    </script>
 </body>
 </html>
