--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 <div style="color: grey;font-size:12px;"><span style="margin-right:27px ;margin-left:11px">Delivery Locations</span> <span style="margin-right:8px ;">© 2022 WaterDriver</span></div>
 </div>
 </div>
-<div class="center"><img src="logo.svg" alt="" style="width:218px"></div>
+<div class="center"><img src="img/logo.svg" alt="" style="width:218px"></div>
 </footer>
 </body>
 </html>
