--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                 botted water and more, delivered to your door
             </h1>
         <div class="searchbar">
-            <span><buttom><img src="noun-project-462.svg" class="locationimg"></buttom></span>
+            <span><buttom><img src="img/locationimg.png" class="locationimg"></buttom></span>
             <span><input type="text" placeholder="Enter delivery address" class="searcher"></span>
-            <span><buttom> <img src="1384651627.svg" style="height: 50px; width: 20px;"></buttom></span>
+            <span><buttom> <img src="img/searchimg.png" class="searchimg"></buttom></span>
         </div>
         </section>
         <br>
