--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
     <header >
     <nav class="main-nav">
         <div>
-        </div>
-        <input type="checkbox" id="check">
+        </div><input type="checkbox" id="check">
         <label for="check" class="menu-btn" >
             <i class="fas fa-bars" ></i>
-        </label><div>
+        </label>
+        <div>
+            
             <div class="toplogo"><a href="index.html"><img src="img/logo.svg" alt=""></a></div>
-        <div><img src="img/cart.webp"class="cart" ></div>
+        <label><img src="img/cart.webp"class="cart" ></label>
     </div>
         <ul class="navlinks">
         <li><a href="profile.html">Profile</a></li>
