--- a/contact.html
+++ b/contact.html
@@ -4,13 +4,38 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsive Navbar</title>
-    <link rel="stylesheet" href="style/profile.css" />
+    <title>WaterDriver</title>
+    <link rel="stylesheet" href="style/style.css" />
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
-    <script src="amin.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+<link rel="shortcut icon" type="img/png"href="img/WDD.jpg">
+
+<script  src="amin.js"></script>
 </head>
-<body>
-    <header>
+<body style="background-color:#181818">
+    </script>
+    <header >
+    <nav class="main-nav">
+        <div>
+        </div><input type="checkbox" id="check">
+        <label for="check" class="menu-btn" >
+            <i class="fas fa-bars" ></i>
+        </label>
+        <div>
+            
+            <div class="toplogo"><a href="index.html"><img src="img/logo.svg" alt=""></a></div>
+        <label><img src="img/cart.webp"class="cart" ></label>
+    </div>
+        <ul class="navlinks">
+        <li><a href="profile.html">Profile</a></li>
+        <li><a href="trackorder.html">Track order</a></li>
+        <li><a href="yourcart.html"> your cart</a></li>
+        <li><a href="ordernow.html" class="contact">Order now</a></li>
+        </ul>
+    </nav>
+    </header>
     <nav class="main-nav">
         <input type="checkbox" id="check" />
         <label for="check" class="menu-btn">
@@ -25,3 +50,36 @@
         </ul>
     </nav>
     </header>
+    <footer style="background-color:#0C141C; margin-bottom:0">
+        <b>
+            <div style=" text-align: center; display: block; margin-top: 20px;">
+        <div class="footertop"> Get to Know Us</div>
+        <div class="footer">Who we are</div>
+        <div class="footer">Carrers</div>
+        <div class="footer"><a href="https://www.linkedin.com/in/amin-r-0b9a47229/" target="_blank"style="text-decoration:none;color: grey;">Linkedin</a></div>
+        <div class="footer">Glassdoor</div>
+        <div class="footer">Accessiblity</div>
+        </div>
+        <br>
+        <div  style=" text-align: center; display: block">
+        <div class="footertop">Let Us Help You</div>
+        <div class="footer">Account Details</div>
+        <div class="footer">Order History</div>
+        <div class="footer">Help</div>
+        </div>
+        <br>
+        <div  style=" text-align: center; display: block">
+        <div class="socialmedia">Social Media</div>
+        <div style="display: inline;;color: grey">
+        <div ><span><img src="img/facebook.svg" alt=""class="facebook"></span><a href="https://twitter.com/waterdriverinc" target="_blank"><img src="img/twitter.svg" alt="" class="twitter"><a><span><a href="https://www.instagram.com/waterdriverinc/?hl=en" target="_blank"><img src="img/instagram.svg" alt="" class="instagram"></a></span></div>
+        </div>
+        <br>
+        <br>
+        <div style="color: grey;font-size:12px;justify-content:space-evenly; margin-bottom:5px"><span style="margin-right:8px;margin-left:6px">Terms of Service</span><span style="margin-right:30px ;margin-left:30px;">Privacy</span><span style="margin-right:px ;">Notice At Collection</span></div>
+        <div style="color: grey;font-size:12px;"><span style="margin-right:27px ;margin-left:11px">Delivery Locations</span> <span style="margin-right:8px ;">© 2022 WaterDriver</span></div>
+        </div>
+        </div>
+        <div class="center"><img src="img/logo.svg" alt="" style="width:218px"></div>
+        </footer>
+    </body>
+    </html>
