--- a/profile.html
+++ b/profile.html
@@ -4,39 +4,42 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Profile</title>
-    <link rel="stylesheet" href="style/profile.css" />
+    <title>WaterDriver</title>
+    <link rel="stylesheet" href="style/style.css" />
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
-<script  src="faq.js"></script>
+<link rel="shortcut icon" type="img/png"href="img/WDD.jpg">
+
+<script  src="amin.js"></script>
 </head>
 <body style="background-color:#181818">
     </script>
     <header >
     <nav class="main-nav">
         <div>
-        </div>
-        <input type="checkbox" id="check">
+        </div><input type="checkbox" id="check">
         <label for="check" class="menu-btn" >
             <i class="fas fa-bars" ></i>
-        </label><div>
+        </label>
+        <div>
+            
             <div class="toplogo"><a href="index.html"><img src="img/logo.svg" alt=""></a></div>
-        <div><img src="img/cart.webp"class="cart" ></div>
+        <label><img src="img/cart.webp"class="cart" ></label>
     </div>
         <ul class="navlinks">
         <li><a href="profile.html">Profile</a></li>
-        <li><a href="about.html">Track order</a></li>
-        <li><a href="contact.html"> your CART</a></li>
-        <li><a href="order.html" class="contact">Order now</a></li>
+        <li><a href="trackorder.html">Track order</a></li>
+        <li><a href="yourcart.html"> your cart</a></li>
+        <li><a href="ordernow.html" class="contact">Order now</a></li>
         </ul>
     </nav>
     </header>
     <footer style="background-color:#0C141C; margin-bottom:0">
         <b>
             <div style=" text-align: center; display: block; margin-top: 20px;">
-        <div class="footertop"style="border-top: 2rem black;border-top-style: solid;"> Get to Know Us</div>
+        <div class="footertop"style="border-top-style: solid;"> Get to Know Us</div>
         <div class="footer">Who we are</div>
         <div class="footer">Carrers</div>
         <div class="footer"><a href="https://www.linkedin.com/in/amin-r-0b9a47229/" target="_blank"style="text-decoration:none;color: grey;">Linkedin</a></div>
@@ -62,6 +65,6 @@
         <div style="color: grey;font-size:12px;"><span style="margin-right:27px ;margin-left:11px">Delivery Locations</span> <span style="margin-right:8px ;">© 2022 WaterDriver</span></div>
         </div>
         </div>
-        <div class="center"><img src="logo.svg" alt="" style="width:218px"></div>
+        <div class="center"><img src="img/logo.svg" alt="" style="width:218px"></div>
         </footer>
 </body>
