--- a/cart.html
+++ b/cart.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WaterDriver</title>
-    <link rel="stylesheet" href="style/profile.css" />
+    <link rel="stylesheet" href="style/cart.css" />
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,7 +26,7 @@
         <div>
             
             <div class="toplogo"><a href="index.html"><img src="img/logo.svg" alt=""></a></div>
-            <buttom><a href="cart.html"> <img src="img/cart.webp"class="cart" ></a></buttom>
+        <buttom><a href=""> <img src="img/cart.webp"class="cart" ></a></buttom>
     </div>
         <ul class="navlinks">
         <li><a href="profile.html">Profile</a></li>
@@ -36,25 +36,10 @@
         </ul>
     </nav>
     </header>
-    <main>
-    <div class="container">
-        <span class="listborders">YOUR ORDERS</span>
-        <span class="listborders">YOUR PAYMENTS</span>
-        <span class="listborders">YOUR SUBSCIRBTIONS </span>
-        <span class="listborders">LOGIN & SECURITY </span>
-
-    </div>
-
-
-
-
-
-
-    </main>
     <footer style="background-color:#0C141C; margin-bottom:0">
         <b>
             <div style=" text-align: center; display: block; margin-top: 20px;">
-        <div class="footertop"style="border-top-style: solid;"> Get to Know Us</div>
+        <div class="footertop"style="border-top: 2rem black;border-top: 2rem #0C141C solid; "> Get to Know Us</div>
         <div class="footer">Who we are</div>
         <div class="footer">Carrers</div>
         <div class="footer"><a href="https://www.linkedin.com/in/amin-r-0b9a47229/" target="_blank"style="text-decoration:none;color: grey;">Linkedin</a></div>
@@ -82,4 +67,5 @@
         </div>
         <div class="center"><img src="img/logo.svg" alt="" style="width:218px"></div>
         </footer>
-</body>
+        </body>
+        </html>
