--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div>
             
             <div class="toplogo"><a href="index.html"><img src="img/logo.svg" alt=""></a></div>
-        <label><img src="img/cart.webp"class="cart" ></label>
+        <buttom><a href="cart.html"> <img src="img/cart.webp"class="cart" ></a></buttom>
     </div>
         <ul class="navlinks">
         <li><a href="profile.html">Profile</a></li>
