--- a/profile.html
+++ b/profile.html
@@ -40,16 +40,9 @@
     <div class="container">
         <span class="listborders">YOUR ORDERS</span>
         <span class="listborders">YOUR PAYMENTS</span>
-        <span class="listborders">YOUR SUBSCIRBTIONS </span>
+        <span class="yoursubs">YOUR SUBSCIRBTIONS </span>
         <span class="listborders">LOGIN & SECURITY </span>
-
     </div>
-
-
-
-
-
-
     </main>
     <footer style="background-color:#0C141C; margin-bottom:0">
         <b>
