--- a/index.html
+++ b/index.html
@@ -40,14 +40,18 @@
         <section class="hero">
             <div class="hero-content">
             <h1 class="titleline">
-                botted water and more, delivered to your door
-            </h1>
-        <div class="searchbar">
+                        botted water and more, delivered to your door
+                    </h1>
+            <div class="searchbar">
             <span><buttom><img src="img/locationimg.png" class="locationimg"></buttom></span>
-            <span><input type="text" placeholder="Enter delivery address" class="searcher"></span>
-            <span><buttom> <img src="img/searchimg.png" class="searchimg"></buttom></span>
-        </div>
-        </section>
+            <input type="text" placeholder="Enter delivery address" class="searcher"  autocomplete="chrome-off">
+            <span><button><img src="img/searchimg.png" class="searchimg"></button></span>
+                <div class="results">
+                <ul>
+                </ul>
+                </div>
+            </div>
+            </section>     
         <br>
         <br>
         <span class="firstline"> Water Near You</span>
@@ -63,6 +67,7 @@
             <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
+            <button class="ordernowbuttom"> Order Now </button>
         </div>
         <div>
             <div class="topbox"><img  src="img/nestlewater-removebg-preview.png" alt="" class="size"></div>
@@ -73,6 +78,7 @@
             <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
+            <button class="ordernowbuttom"> Order Now </button>
             </div>
     </div>
     <div class="block">
@@ -85,6 +91,7 @@
             <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
+            <button class="ordernowbuttom"> Order Now </button>
         </div>
         <div>
             <div class="box"><img  src="img/dasani.png"class="size"></div>
@@ -95,6 +102,7 @@
             <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
+            <button class="ordernowbuttom"> Order Now </button>
             </div>
     </div>
     <div class="block">
@@ -107,6 +115,7 @@
             <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
+            <button class="ordernowbuttom"> Order Now </button>
         </div>
         <div>
             <div class="box"><img  src="img/smartwaterbottles.webp"class="size" ></div>
@@ -117,6 +126,7 @@
             <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
+            <button class="ordernowbuttom"> Order Now </button>
             </div>
     </div>
     <div class="block">
@@ -129,6 +139,7 @@
             <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
+            <button class="ordernowbuttom"> Order Now </button>
         </div>
         <div>
             <div class="box"><img  src="img/fijibottles.webp"class="size"></div>
@@ -139,6 +150,7 @@
             <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
+            <button class="ordernowbuttom"> Order Now </button>
             </div>
     </div>
     <br>
@@ -156,6 +168,7 @@
             <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
+            <button class="ordernowbuttom"> Order Now </button>
         </div>
         <div>
             <div class="topbox"><img  src="img/nestle.png"alt="" class="size"></div>
@@ -166,6 +179,7 @@
             <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
+            <button class="ordernowbuttom"> Order Now </button>
             </div>
     </div>
     <div class="block">
@@ -178,6 +192,7 @@
             <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div> &FREE delivery</div>
+            <button class="ordernowbuttom"> Order Now </button>
             </div>  
             <div>
             <div class="box"><img  src="img/polandspringjug.webp"class="size"></div>
@@ -189,6 +204,7 @@
             <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
+            <button class="ordernowbuttom"> Order Now </button>
             </div>
     </div>
     <br>
@@ -204,6 +220,7 @@
             <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
+            <button class="ordernowbuttom"> Order Now </button>
         </div>
         <div>
             <div class="box"><img  src="img/nestlesmall.png"class="size"></div>
@@ -214,6 +231,7 @@
             <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
+            <button class="ordernowbuttom"> Order Now </button>
             </div>
     </div>
     <div class="block">
@@ -227,6 +245,7 @@
             <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
+            <button class="ordernowbuttom"> Order Now </button>
         </div>
     <div>
             <div class="box"><img  src="img/deerpark.webp"class="size"></div>
@@ -237,6 +256,7 @@
             <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
+            <button class="ordernowbuttom"> Order Now </button>
         </div>
     </div>
     <br>
