--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 <link rel="shortcut icon" type="img/png"href="img/WDD.jpg">
 
-<script  src="amin.js"></script>
+<script  src="index.js" defer></script>
 </head>
 <body style="background-color:#181818">
     </script>
@@ -47,8 +47,7 @@
             <input type="text" placeholder="Enter delivery address" class="searcher"  autocomplete="chrome-off">
             <span><button><img src="img/searchimg.png" class="searchimg"></button></span>
                 <div class="results">
-                <ul>
-                </ul>
+                <ul></ul>
                 </div>
             </div>
             </section>     
