--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="popup" id="popup">
                 <img src="img/checkmark.svg" alt="" id="productimage">
                 <p>Your details has been successfully submitted. Thanks!</p> 
-                <button type="button" onclick="closepopup()">OK</button>
+                <button type="button" style="width: 13rem;height: 2rem;margin: 1rem 0 0 0;background-color: limegreen;border-radius: 6px;font-family: inherit;font-weight: bolder; " onclick="closepopup()">OK</button>
             </div>
         </div>
         <div>
@@ -80,7 +80,7 @@
             <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
-            <button class="ordernowbuttom"> Order Now </button>
+            <button class="ordernowbuttom" onclick="openpopup()"> Order Now </button>
             </div>
     </div>
     <div class="block">
@@ -314,7 +314,7 @@
 <div  style=" text-align: center; display: block">
 <div class="socialmedia">Social Media</div>
 <div style="display: inline;;color: grey">
-<div ><span><img src="img/facebook.svg" alt=""class="facebook"></span><a href="https://twitter.com/waterdriverinc" target="_blank"><img src="img/twitter.svg" alt="" class="twitter"><a><span><a href="https://www.instagram.com/waterdriverinc/?hl=en" target="_blank"><img src="img/instagram.svg" alt="" class="instagram"></a></span></div>
+<div ><span><img src="img/facebook.svg" alt=""class="facebook"></span><a href="https://twitter.com/waterdriverinc" target="_blank"><img src="img/twitter.svg" alt="" class="twitter" style="width: 40px;"><a><span><a href="https://www.instagram.com/waterdriverinc/?hl=en" target="_blank"><img src="img/instagram.svg" alt="" class="instagram"></a></span></div>
 </div>
 <br>
 <br>
