--- a/trackorder.html
+++ b/trackorder.html
@@ -11,8 +11,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 <link rel="shortcut icon" type="img/png"href="img/WDD.jpg">
-
-<script  src="amin.js"></script>
+<script src="trackorder.js" defer></script>
 </head>
 <body style="background-color:#181818">
     </script>
@@ -36,6 +35,31 @@
         </ul>
     </nav>
     </header>
+    <main>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3352.08968120984!2d-97.162690484774!3d32.84287708793139!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864e7f3c586d910d%3A0x3f40388ec416088b!2sL.D.%20Bell%20High%20School!5e0!3m2!1sen!2sus!4v1651675659347!5m2!1sen!2sus" width="90%" height="450" style="border:0; margin: 0 auto; display:grid" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <br>
+        <div style="margin: 0 0 0 5vw;">
+        <div > delivery's arriving date : <a id="timer"></a> </div>
+        <br>
+        <div>delivery's arriving date : <a href="" style="color: aliceblue;"> Jan 5, 2024 15:37:25</a></div>
+        <br>
+        <div>delivery's arriving loaction :<button style="    background-color: white;
+            margin: 0 0 0 0.5rem;
+            font-family: 'Montserrat';
+            font-size: inherit;
+            padding: 1px 4px 2px 4px;
+            border-radius: 4px;
+        " onclick="getLocation()">Get my location <a id="location"></a></button>
+        </div>
+        <br>
+            <div>delivery's owner: <a id="owner">AMIN</a></div>
+        </div>
+    </main>
     <footer style="background-color:#0C141C; margin-bottom:0">
         <b>
             <div style=" text-align: center; display: block; margin-top: 20px;">
